--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.6</version>
+            <version>1.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -38,4 +38,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>  
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-compiler-plugin</artifactId> 
+                <configuration>
+                    <source>1.6</source> 
+                    <target>1.6</target> 
+                    <encoding>UTF8</encoding>
+                </configuration> 
+            </plugin>
+        </plugins>
+    </build>
 </project>
